Removing directory change

--- a/circle.yml
+++ b/circle.yml
@@ -10,7 +10,7 @@ jobs:
           working_directory: /go/src/github.com/smugcloud/echo-server
           command: |
             set -eu
-            go get -t -d -v ./...
+            go get -t -d -v
             go test -v -race 
       - test_results_store:
           path: /tmp/test-results
